--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage('Checkout Code') {
             steps {
                 git branch: 'main',
-                    url: 'https://github.com/supundp/jenkins-test.git',
+                    url: 'https://github.com/supundp/repo1.git',
                     credentialsId: 'TST1'
             
             }
